# sfguide-snowpipe-streaming-fast-react-dashboard

./: .env.example  .gitignore  ASSUMPTIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION.md  README.md  SECURITY.md  TALK_TRACK.md  TESTING.md  TROUBLESHOOTING.md  deploy-app.sh  quickstart.sh  semantic_view.sql  setup.sql
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml
vm-ingest/: Dockerfile  README.md  book.py  docker-compose.yml  ingest_worker.py  pyproject.toml  streaming_service.py
vm-ingest/terraform/: terraform.tfvars
vm-ingest/tests/: test_book.py
web/: .gitignore  README.md  app.yml  jest.config.js  next.config.js  package-lock.json  package.json  server.js  snowflake.yml  tailwind.config.js  tsconfig.json
web/__tests__/components/: KpiTiles.test.tsx  LatencyTimeline.test.tsx  LiveTape.test.tsx
web/__tests__/lib/: age.test.ts  liveStats.test.ts  ws.test.ts
web/__tests__/server/: queries.test.ts  snowflake-client.test.ts  snowflake-reader.test.ts  vm-proxy.test.ts  ws-broker.test.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AgentChat.tsx  ArchitectureDiagram.tsx  BurstStats.tsx  DayMetrics.tsx  EventGenerator.tsx  HpaStatus.tsx  InteractiveLatency.tsx  KpiTiles.tsx  LatencyComparison.tsx  LatencyStats.tsx  LatencyTimeline.tsx  LiveTape.tsx  MarketSimulator.tsx  PipelineObservability.tsx  SectorDonut.tsx  ServingStrategyComparison.tsx  SkeletonCard.tsx  StressTest.tsx  TopMarks.tsx  TradesPerHour.tsx  Watchlist.tsx
web/src/lib/: age.ts  baseline.ts  ws.ts  (+5 more)
(+24 files in other folders)
